--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@ We offer a comprehensive range of medications to meet your needs. Our expert pha
 <!-- doctors section ends -->
 
 <!-- appointmenting section starts   -->
+<!-- appointmenting section starts -->
 
 <section class="appointment" id="appointment">
 
@@ -329,21 +330,13 @@ We offer a comprehensive range of medications to meet your needs. Our expert pha
             <img src="image/appointment-img.svg" alt="">
         </div>
 
-        <form action="<?php echo $_SERVER['PHP_SELF'];?>" method="post">
-        <?php
-            if(isset($message)) {
-                foreach($message as $message) {
-                echo'<p class ="message">'.$message.'</p>';
-            }
-            }
-        ?>
-      
+        <form id="appointmentForm">
             <h3> make appointment</h3>
-            <input type="text"name="name" placeholder="your name" class="box">
-            <input type="number"name="number" placeholder="your number" class="box">
-            <input type="email"name="email" placeholder="your email" class="box">
-            <input type="date"name="date" class="box">
-            <input type="submit" name="submit" value="appointment now" class="btn">
+            <input type="text" name="name" placeholder="your name" class="box" required>
+            <input type="number" name="number" placeholder="your number" class="box" required>
+            <input type="email" name="email" placeholder="your email" class="box" required>
+            <input type="date" name="date" class="box" id="appointmentDate" required>
+            <input type="submit" value="appointment now" class="btn">
         </form>
 
     </div>
@@ -351,6 +344,22 @@ We offer a comprehensive range of medications to meet your needs. Our expert pha
 </section>
 
 <!-- appointmenting section ends -->
+
+<script>
+document.getElementById('appointmentForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // form submit थांबवतो
+
+    // date input घेतो
+    const selectedDate = document.getElementById('appointmentDate').value;
+
+    // popup message
+    alert(`Appointment booked successfully on ${selectedDate} 😊`);
+
+    // form reset करतो
+    this.reset();
+});
+</script>
+
 
 <!-- review section starts  -->
 
